# orchestrator-ia

./: .gitignore  CHANGELOG.md  LICENSE  README.md  bootstrap-agents.bat  get.ps1  install.ps1  package.json  prompt_ambiente_multiagente.md
runtime/: README.md  pyproject.toml
runtime/src/orchestrator_runtime/: __init__.py  __main__.py  cli.py  config.py  diagnostics.py  errors.py  events.py
runtime/src/orchestrator_runtime/agents/: __init__.py  base.py  base_adapters.py  claude.py  codex.py  gemini.py  kimi.py  opencode.py  process.py
runtime/src/orchestrator_runtime/documentation/: __init__.py  detector.py  updater.py  validator.py
runtime/src/orchestrator_runtime/execution/: __init__.py  artifacts.py  git_workspace.py  locks.py  runner.py  (+2 more)
runtime/tests/: conftest.py
runtime/tests/integration/: test_end_to_end_fake_agents.py
runtime/tests/unit/: test_agent_process.py  test_agent_registry.py  test_agent_timeout_budget.py  test_agent_timeout_issue.py  test_cli.py  test_cli_encoding.py  test_completion_gate.py  test_context_compaction.py  test_correction_loop.py  test_criteria_builder.py  test_diagnostics.py  test_documentation_gate.py  test_git_changed_files.py  test_global_tooling_always_on.py  test_locks.py  test_mcp_tool_docstrings.py  test_mcp_tools.py  test_memory.py  test_profile_cli_command.py  test_repair_loop_service.py  test_resolve_workspace.py  test_resume.py  test_routing.py  test_rules_manager.py  test_skill_selection.py  test_state_machine.py  test_task_persistence.py  test_test_discovery.py  test_transcript_p0_fixes.py  test_validation.py
(+248 files in other folders)
