[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestrator-runtime"
version = "0.4.11"
description = "Runtime persistente de orquestração multiagente (StarFusion)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "UNLICENSED" }
authors = [{ name = "Henrique Rodrigues", email = "henrique@starfusion.com.br" }]
dependencies = [
  "pydantic>=2.6",
  "sqlalchemy>=2.0",
  "typer>=0.12",
  "rich>=13.7",
  "mcp>=1.6,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
llm = ["httpx>=0.27"]

[project.scripts]
orchestrator-runtime = "orchestrator_runtime.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
